[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/character/tabs/components/ClassEntry.gd" id="1_0"]
[ext_resource type="Theme" path="res://themes/bg3_theme.tres" id="2_0"]

[node name="ClassEntry" type="PanelContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 100)
size_flags_horizontal = 3
size_flags_vertical = 0
clip_contents = false
mouse_filter = 0
script = ExtResource("1_0")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_constants/separation = 2

[node name="Icon" type="TextureRect" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
custom_minimum_size = Vector2(40, 40)
expand_mode = 1
stretch_mode = 5

[node name="ClassNameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
custom_minimum_size = Vector2(0, 24)
text = "Class Name"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="DescriptionLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
custom_minimum_size = Vector2(0, 18)
bbcode_enabled = true
fit_content = true
scroll_active = false
text = ""
autowrap_mode = 3
